Updated to recycle header

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,18 +9,8 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <header>
-    <a href="index.html">
-    <div class="center">
-    <h1 style="display: inline;">Rooster Landscaping LLC</h1>
-    </a>
-    <a href="Quote.html">
-      <button style="background-color: green; font-weight: 600; margin-left: 90%; position: relative; bottom: 20px;"
-        type="button" class="btn btn-secondary btn-sm">Get a Quote</button>
-    </a>
-    <br/><br/>
-    <hr/>
-</header>
+   <div id="header-placeholder"></div>
+  <script src="js/main.js"></script>
 <h2>Our Company</h2>
 <h4 >
 We are a full-service landscape company based in San Antonio, Texas. We specialize in providing quality service that meets or exceeds our customers’ expectations. We take pride in being able to provide our customers with everything from initial consultation through design and installation.
@@ -28,6 +18,7 @@ We are a full-service landscape company based in San Antonio, Texas. We speciali
 We have over 10 years of experience and have built a reputation as being honest and hardworking individuals who care about their clients’ needs. If you’re looking for someone to help beautify your property, then look no further than Lawn DR Landscaping.
 </h4>
 <img src="/Images/aboutus hug.webp" alt="AboutUs"/>
+
 <footer>
 <h2>Call Us Today: (000) 000-0000</h2>
 <p>&copy Copyright RoosterLandscaping | 2025 | San Antonio, Texas |</p>
