--- a/Quote.html
+++ b/Quote.html
@@ -9,6 +9,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <p>In Construction</p>
+   <div id="header-placeholder"></div>
+  <script src="js/main.js"></script>
 </body>
 </html>
