--- a/index.html
+++ b/index.html
@@ -10,58 +10,42 @@
   <meta name="viewport" content="width = device-width, initial-scale=1.0" />
   <meta http-equiv="refresh" content="30" />
  
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
 
 <body>
   <!--Starting to add details-->
-  <div class="center">
-    <a href="index.html">
-    <h1 style="display: inline;">Rooster Landscaping LLC</h1>
-    </a>
-    <a href="Quote.html">
-      <button style="background-color: green; font-weight: 600; margin-left: 90%; position: relative; bottom: 20px;"
-        type="button" class="btn btn-secondary btn-sm">Get a Quote</button>
-    </a>
-    <hr />
-  </div>
-  <div class="nav-link">
-    <ul class="nav nav-underline">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href="AboutUs.html">About Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="Services.html">Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="OurWork.html">Our Work</a>
-      </li>
-
-    </ul>
-  </div>
+  <div id="header-placeholder"></div>
+  <script src="js/main.js"></script>
+  
   <!--Home Page pictures-->
-  <img src="/Images/Logo direct.png" alt="Logo" class="center" height="300" style="position: relative; bottom: 58px;"/>
-
+  <img src="/Images/Logo direct.png" alt="Logo" class="center" height="300" style="position: relative; bottom: 40px;">
   </div>
-  <div class="home-photos">
-    <img src="/Images/mainpage pic.webp" alt="Landscaping" />
 
+  <div class="home-photos">
+  <div class="home-photos-1">
+    <img src="/Images/mainpage pic.webp" alt="Landscaping" />
+  </div>
+  <div class="home-photos-2">
     <img src="/Images/mainpage pic2.jpeg" alt="Landscaping" />
+  </div>
+  <div class="home-photos-3">
     <img src="/Images/mainpage pic 3.webp" alt="Landscaping" />
+  </div>
+  <div class="home-photos-4">
     <img src="/Images/mainpage pic4.jpg" alt="Landscaping" />
   </div>
-
-
-  <img src="/Images/Logo.png" height="300" alt="Rooster Landscaping business card" title="Card" />
+</div>
+<logo class ="img">
+  <img src="/Images/Logo.png" height="300" alt="Rooster Landscaping business card" title="Card" class="center" />
   <br /><br /><br />
+</logo>
+
   <!--Learn how to receive information submitted-->
   <form>
+    <div class= center>
     <div>
       <label for-="fname">Name: </label>
       <input type="text" id="fname" name="info" placeholder="Enter Name" required />
@@ -75,14 +59,19 @@
       <br />
       <input type="submit" />
     </div>
+    </div>
   </form>
 
+
+
   <hr />
+  <footer>
   <p>Contact Us: 000-000-0000</p>
   <p>FaceBook</p>
   <a href="https://nextdoor.com/pages/rooster-landscaping-san-antonio-tx/">
     <img src="Images/facebook.png" height="50" alt="Link to Facebook" title="Facebook Link" />
   </a>
+  </footer>
 </body>
 
 </html>
