Added contact form

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -12,16 +12,16 @@
    <div id="header-placeholder"></div>
   <script src="js/main.js"></script>
 <h2>Our Company</h2>
-<h4 >
+<h6>
 We are a full-service landscape company based in San Antonio, Texas. We specialize in providing quality service that meets or exceeds our customers’ expectations. We take pride in being able to provide our customers with everything from initial consultation through design and installation.
 <br/><br/>
 We have over 10 years of experience and have built a reputation as being honest and hardworking individuals who care about their clients’ needs. If you’re looking for someone to help beautify your property, then look no further than Lawn DR Landscaping.
 </h4>
-<img src="/Images/aboutus hug.webp" alt="AboutUs"/>
+<img src="/Images/aboutus hug.webp" alt="AboutUs" style=" height:200px; position:relative; left: 40px; top: 40px"/>
 
 <footer>
-<h2>Call Us Today: (000) 000-0000</h2>
-<p>&copy Copyright RoosterLandscaping | 2025 | San Antonio, Texas |</p>
+ <div id="footer-placeholder"></div>
+  <script src="js/main.js"></script>
 </footer>
 </body>
 </html>
