--- a/OurWork.html
+++ b/OurWork.html
@@ -19,4 +19,8 @@ Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutter
 </p>
     </ul>
   </div>
+  <footer>
+     <div id="footer-placeholder"></div>
+  <script src="js/main.js"></script>
+  </footer>
 </html>
