--- a/Services.html
+++ b/Services.html
@@ -12,7 +12,7 @@
   <script src="js/main.js"></script>
 
 
-  <img src="Images/lawnmower.png" alt="lawnmower"  height="300" style="position: absolute ; bottom: 500px; right: 100px;">
+  <img src="Images/lawnmower.png" alt="lawnmower"  height="200" style="position: absolute ; bottom: 100px; right: 10px;">
  
   <p>Consulted he eagerness unfeeling deficient existence of. Calling nothing end fertile for venture way boy. Esteem spirit temper too say adieus who direct esteem. It esteems luckily mr or picture placing drawing no. Apartments frequently or motionless on reasonable projecting expression. Way mrs end gave tall walk fact bed.
 
@@ -20,4 +20,8 @@ Imagine was you removal raising gravity. Unsatiable understood or expression dis
 
 Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutters nay. Old insipidity motionless continuing law shy partiality. Depending acuteness dependent eat use dejection. Unpleasing astonished discovered not nor shy. Morning hearted now met yet beloved evening. Has and upon his last here must.
 </p>
+<footer>
+   <div id="footer-placeholder"></div>
+  <script src="js/main.js"></script>
+</footer>
 </html>
