--- a/header.html
+++ b/header.html
@@ -13,11 +13,14 @@
     <a href="index.html" style="color: black; position: relative; top: 25px;">
     <h1  style="display: inline;">Rooster Landscaping LLC</h1>
     </a>
-    <a href="Quote.html">
+    <a href="Contact.html">
       <button style="background-color: green; font-weight: 600; margin-left: 90%; position: relative; bottom: 20px;"
-        type="button" class="btn btn-secondary btn-sm">Get a Quote</button>
+        type="button" class="btn btn-secondary btn-sm">Contact Us</button>
     </a>
   </div>
+  <a href="index.html">
+    <img src="/Images/Logo direct.png"  alt="Logo" class="center" height="70" style="position: absolute;left: 20px; top: 4px;">
+  </a>
   <div class="line"></div>
 
   <div class="nav-link">
@@ -34,6 +37,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="OurWork.html" style="color: black;">Our Work</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="Contact.html" style="color: #000;">Contact</a>
       </li>
 
     </ul>
