--- a/index.html
+++ b/index.html
@@ -65,13 +65,8 @@
 
 
   <hr />
-  <footer>
-  <p>Contact Us: 000-000-0000</p>
-  <p>FaceBook</p>
-  <a href="https://nextdoor.com/pages/rooster-landscaping-san-antonio-tx/">
-    <img src="Images/facebook.png" height="50" alt="Link to Facebook" title="Facebook Link" />
-  </a>
-  </footer>
+ <div id="footer-placeholder"></div>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
