--- a/footer.html
+++ b/footer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>RoosterLandscaping | Quote</title>
+    <title>RoosterLandscaping | About Us</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -9,7 +9,15 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-   <div id="header-placeholder"></div>
-  <script src="js/main.js"></script>
+    <footer>
+  <p>Contact Us: 000-000-0000</p>
+  <p>FaceBook</p>
+  <a href="https://nextdoor.com/pages/rooster-landscaping-san-antonio-tx/">
+    <img src="Images/facebook.png" height="50" alt="Link to Facebook" title="Facebook Link" />
+  </a>
+<br> <br>
+  <p>&copy Copyright RoosterLandscaping | 2025 | San Antonio, Texas |</p>
+  </footer>
+  
 </body>
 </html>
