Expanded on design layout placing placeholders for later implementation

--- a/frontend/OurWork.html
+++ b/frontend/OurWork.html
@@ -10,15 +10,33 @@
 </head>
  <div id="header-placeholder"></div>
   <script src="main.js"></script>
-
+<body>
       <p>Consulted he eagerness unfeeling deficient existence of. Calling nothing end fertile for venture way boy. Esteem spirit temper too say adieus who direct esteem. It esteems luckily mr or picture placing drawing no. Apartments frequently or motionless on reasonable projecting expression. Way mrs end gave tall walk fact bed.
 
 Imagine was you removal raising gravity. Unsatiable understood or expression dissimilar so sufficient. Its party every heard and event gay. Advice he indeed things adieus in number so uneasy. To many four fact in he fail. My hung it quit next do of. It fifteen charmed by private savings it mr. Favourable cultivated alteration entreaties yet met sympathize. Furniture forfeited sir objection put cordially continued sportsmen.
 
 Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutters nay. Old insipidity motionless continuing law shy partiality. Depending acuteness dependent eat use dejection. Unpleasing astonished discovered not nor shy. Morning hearted now met yet beloved evening. Has and upon his last here must.
 </p>
-    </ul>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+      <img src="/Images/woman_lawnmower.jpg" width="300px" class="img-flex" />
+    </div>
+    <div class="col-5">
+      <p>Consulted he eagerness unfeeling deficient existence of. Calling nothing end fertile for venture way boy. Esteem spirit temper too say adieus who direct esteem. It esteems luckily mr or picture placing drawing no. Apartments frequently or motionless on reasonable projecting expression. Way mrs end gave tall walk fact bed.
+
+Imagine was you removal raising gravity. Unsatiable understood or expression dissimilar so sufficient. Its party every heard and event gay. Advice he indeed things adieus in number so uneasy. To many four fact in he fail. My hung it quit next do of. It fifteen charmed by private savings it mr. Favourable cultivated alteration entreaties yet met sympathize. Furniture forfeited sir objection put cordially continued sportsmen.
+
+Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutters nay. Old insipidity motionless continuing law shy partiality. Depending acuteness dependent eat use dejection. Unpleasing astonished discovered not nor shy. Morning hearted now met yet beloved evening. Has and upon his last here must.
+</p>
+    </div>
+    <div class="col">
+      <img src="/Images/mainpage_pic.webp" width="300px" class="img-flex"/>
+    </div>
   </div>
+</div>
+  </div>
+  </body>
   <footer>
      <div id="footer-placeholder"></div>
   <script src="main.js"></script>
