--- a/frontend/header.html
+++ b/frontend/header.html
@@ -11,7 +11,7 @@
 <body>
     <div class="center">
     <a href="index.html" style="color: black; position: relative; top: 25px;">
-    <h1  style="display: inline;">Rooster Landscaping LLC</h1>
+    <h1>Rooster Landscaping LLC</h1>
     </a>
     <a href="Contact.html">
       <button style="background-color: green; font-weight: 600; margin-left: 90%; position: relative; bottom: 20px;"
@@ -19,9 +19,8 @@
     </a>
   </div>
   <a href="index.html">
-    <img src="/Images/Logo_direct.png"  alt="Logo" class="center" height="70" style="position: absolute;left: 35px; top: 4px;">
+    <img src="/Images/rooster_logo.png"  alt="Logo" class="center" height="90" style="position: absolute;left: 35px; top: 4px;">
   </a>
-  <div class="line"></div>
 
   <div class="nav-link">
     <ul class="nav nav-underline">
