--- a/frontend/AboutUs.html
+++ b/frontend/AboutUs.html
@@ -11,14 +11,28 @@
 <body>
    <div id="header-placeholder"></div>
   <script src="main.js"></script>
-<h2>Our Company</h2>
+<h2 class="center">Our Company</h2>
 <h6>
 We are a full-service landscape company based in San Antonio, Texas. We specialize in providing quality service that meets or exceeds our customers’ expectations. We take pride in being able to provide our customers with everything from initial consultation through design and installation.
 <br/><br/>
 We have over 10 years of experience and have built a reputation as being honest and hardworking individuals who care about their clients’ needs. If you’re looking for someone to help beautify your property, then look no further than Lawn DR Landscaping.
 </h4>
-<img src="/Images/aboutus_hug.webp" alt="AboutUs" style=" height:200px; position:relative; left: 40px; top: 40px"/>
+<div class="container">
+<div class="row">
+<div class="col">
+  <img src="/Images/aboutus_hug.webp" alt="AboutUs" width="400px" class="img-flex"/>
+  <img src="/Images/woman_lawnmower.jpg" alt="AboutUs" width="400px" class="img-flex"/>
+</div>
+<div class="col">
+Must you with him from him her were more. In eldest be it result should remark vanity square. Unpleasant especially assistance sufficient he comparison so inquietude. Branch one shy edward stairs turned has law wonder horses. Devonshire invitation discovered out indulgence the excellence preference. Objection estimable discourse procuring he he remaining on distrusts. Simplicity affronting inquietude for now sympathize age. She meant new their could defer child. An lose at quit to life do dull.
 
+No depending be convinced in unfeeling he. Excellence she unaffected and too sentiments her. Rooms he doors there ye aware in by shall. Education remainder in so cordially. His remainder and own dejection daughters sportsmen. Is easy took he shed to kind.
+
+Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve. 
+</div>
+
+</div>
+</div>
 <footer>
  <div id="footer-placeholder"></div>
   <script src="main.js"></script>
