--- a/frontend/footer.html
+++ b/frontend/footer.html
@@ -5,21 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
-    <footer>
-            <br> <br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br><br> <br><br><br>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
+</head>
+
+    <footer>
+             <br><br><br><br> <br><br><br><br> <br><br><br>
   <p>Contact Us: 000-000-0000</p>
-  <p>FaceBook</p>
   <a href="https://nextdoor.com/pages/rooster-landscaping-san-antonio-tx/">
-    <img src="Images/facebook.png" height="50" alt="Link to Facebook" title="Facebook Link" />
+    <img src="/Images/facebook_logo.png" height="50" alt="Link to Facebook" title="Facebook Link" />
   </a>
 <br> <br>
   <p>&copy Copyright RoosterLandscaping | 2025 | San Antonio, Texas |</p>
-  </footer>
-  
-</body>
+</footer>
 </html>
