Completed basic formatting can focus on backend implementaion

--- a/frontend/AboutUs.html
+++ b/frontend/AboutUs.html
@@ -1,41 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>RoosterLandscaping | About Us</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
-   <div id="header-placeholder"></div>
-  <script src="main.js"></script>
-<h2 class="center">Our Company</h2>
-<h6>
-We are a full-service landscape company based in San Antonio, Texas. We specialize in providing quality service that meets or exceeds our customers’ expectations. We take pride in being able to provide our customers with everything from initial consultation through design and installation.
-<br/><br/>
-We have over 10 years of experience and have built a reputation as being honest and hardworking individuals who care about their clients’ needs. If you’re looking for someone to help beautify your property, then look no further than Lawn DR Landscaping.
-</h4>
-<div class="container">
-<div class="row">
-<div class="col">
-  <img src="/Images/aboutus_hug.webp" alt="AboutUs" width="400px" class="img-flex"/>
-  <img src="/Images/woman_lawnmower.jpg" alt="AboutUs" width="400px" class="img-flex"/>
-</div>
-<div class="col">
-Must you with him from him her were more. In eldest be it result should remark vanity square. Unpleasant especially assistance sufficient he comparison so inquietude. Branch one shy edward stairs turned has law wonder horses. Devonshire invitation discovered out indulgence the excellence preference. Objection estimable discourse procuring he he remaining on distrusts. Simplicity affronting inquietude for now sympathize age. She meant new their could defer child. An lose at quit to life do dull.
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div id="header-placeholder"></div>
+    <script src="main.js"></script>
+    <h2 class="center" style="font-weight: 600">Our Company</h2>
 
-No depending be convinced in unfeeling he. Excellence she unaffected and too sentiments her. Rooms he doors there ye aware in by shall. Education remainder in so cordially. His remainder and own dejection daughters sportsmen. Is easy took he shed to kind.
+    <br /><br /><br />
 
-Endeavor bachelor but add eat pleasure doubtful sociable. Age forming covered you entered the examine. Blessing scarcely confined her contempt wondered shy. Dashwoods contented sportsmen at up no convinced cordially affection. Am so continued resembled frankness disposing engrossed dashwoods. Earnest greater on no observe fortune norland. Hunted mrs ham wishes stairs. Continued he as so breakfast shameless. All men drew its post knew. Of talking of calling however civilly wishing resolve. 
-</div>
+    <div class="container my-5">
+      <div class="row align-items-center">
+        <!-- Left Column (Images) -->
+        <div class="col-md-6 text-center">
+          <img
+            src="/Images/aboutus_hug.webp"
+            alt="About Us"
+            class="img-fluid mb-4 rounded shadow"
+          />
+          <img
+            src="/Images/woman_lawnmower.jpg"
+            alt="About Us"
+            class="img-fluid mb-4 rounded shadow"
+          />
+        </div>
 
-</div>
-</div>
-<footer>
- <div id="footer-placeholder"></div>
-  <script src="main.js"></script>
-</footer>
-</body>
+        <!-- Right Column (Text) -->
+        <div class="col-md-6">
+          <h2 class="mb-4" style="font-weight: 650">About Us</h2>
+          <p style="font-size: 1.1rem; line-height: 1.6">
+            Must you with him from him her were more. In eldest be it result
+            should remark vanity square. Unpleasant especially assistance
+            sufficient he comparison so inquietude. Branch one shy Edward stairs
+            turned has law wonder horses. Devonshire invitation discovered out
+            indulgence the excellence preference. Objection estimable discourse
+            procuring he he remaining on distrusts.
+          </p>
+          <p style="font-size: 1.1rem; line-height: 1.6">
+            Simplicity affronting inquietude for now sympathize age. She meant
+            new their could defer child. An lose at quit to life do dull. No
+            depending be convinced in unfeeling he. Excellence she unaffected
+            and too sentiments her. Rooms he doors there ye aware in by shall.
+          </p>
+          <p style="font-size: 1.1rem; line-height: 1.6">
+            We are a full-service landscape company based in San Antonio, Texas.
+            We specialize in providing quality service that meets or exceeds our
+            customers’ expectations. We take pride in being able to provide our
+            customers with everything from initial consultation through design
+            and installation.
+          </p>
+          <p style="font-size: 1.1rem; line-height: 1.6">
+            We have over 10 years of experience and have built a reputation as
+            being honest and hardworking individuals who care about their
+            clients’ needs. If you’re looking for someone to help beautify your
+            property, then look no further than
+            <strong>Lawn DR Landscaping</strong>.
+          </p>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div id="footer-placeholder"></div>
+      <script src="main.js"></script>
+    </footer>
+  </body>
 </html>
