--- a/frontend/Services.html
+++ b/frontend/Services.html
@@ -1,41 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>RoosterLandscaping | Services</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
- <div id="header-placeholder"></div>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <div id="header-placeholder"></div>
   <script src="main.js"></script>
   <body>
-<p>Consulted he eagerness unfeeling deficient existence of. Calling nothing end fertile for venture way boy. Esteem spirit temper too say adieus who direct esteem. It esteems luckily mr or picture placing drawing no. Apartments frequently or motionless on reasonable projecting expression. Way mrs end gave tall walk fact bed.
+    <br /><br /><br />
+    <div class="container my-5">
+      <div class="row align-items-center">
+        <!-- Text -->
+        <div class="col-md-6">
+          <h2 style="font-weight: 650">Services We Provide:</h2>
+          <p style="font-size: 1.1rem; line-height: 1.6; margin-top: 1rem">
+            Consulted he eagerness unfeeling deficient existence of. Calling
+            nothing end fertile for venture way boy. Esteem spirit temper too
+            say adieus who direct esteem. It esteems luckily mr or picture
+            placing drawing no. Apartments frequently or motionless on
+            reasonable projecting expression. Way mrs end gave tall walk fact
+            bed.
+          </p>
+          <p style="font-size: 1.1rem; line-height: 1.6">
+            Imagine was you removal raising gravity. Unsatiable understood or
+            expression dissimilar so sufficient. Its party every heard and event
+            gay. Advice he indeed things adieus in number so uneasy. To many
+            four fact in he fail. My hung it quit next do of. It fifteen charmed
+            by private savings it mr.
+          </p>
+          <p style="font-size: 1.1rem; line-height: 1.6">
+            Kept in sent gave feel will oh it we. Has pleasure procured men
+            laughing shutters nay. Old insipidity motionless continuing law shy
+            partiality. Depending acuteness dependent eat use dejection.
+            Unpleasing astonished discovered not nor shy.
+          </p>
+        </div>
 
-Imagine was you removal raising gravity. Unsatiable understood or expression dissimilar so sufficient. Its party every heard and event gay. Advice he indeed things adieus in number so uneasy. To many four fact in he fail. My hung it quit next do of. It fifteen charmed by private savings it mr. Favourable cultivated alteration entreaties yet met sympathize. Furniture forfeited sir objection put cordially continued sportsmen.
-
-Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutters nay. Old insipidity motionless continuing law shy partiality. Depending acuteness dependent eat use dejection. Unpleasing astonished discovered not nor shy. Morning hearted now met yet beloved evening. Has and upon his last here must.
-</p>
-<div class="container">
-<div class="row">
-<div class="col">
-  <h4>Services We Provide:</h4>
-  <p>Consulted he eagerness unfeeling deficient existence of. Calling nothing end fertile for venture way boy. Esteem spirit temper too say adieus who direct esteem. It esteems luckily mr or picture placing drawing no. Apartments frequently or motionless on reasonable projecting expression. Way mrs end gave tall walk fact bed.
-
-Imagine was you removal raising gravity. Unsatiable understood or expression dissimilar so sufficient. Its party every heard and event gay. Advice he indeed things adieus in number so uneasy. To many four fact in he fail. My hung it quit next do of. It fifteen charmed by private savings it mr. Favourable cultivated alteration entreaties yet met sympathize. Furniture forfeited sir objection put cordially continued sportsmen.
-
-Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutters nay. Old insipidity motionless continuing law shy partiality. Depending acuteness dependent eat use dejection. Unpleasing astonished discovered not nor shy. Morning hearted now met yet beloved evening. Has and upon his last here must.
-</p>
-</div>
-  <div class="col">
-    <img src="/Images/lawnmower.png" alt="lawnmower" width="400px" class="img-flex" />
-</div>
-</div>
-</div>
-</body>
-<footer>
-   <div id="footer-placeholder"></div>
-  <script src="main.js"></script>
-</footer>
+        <!-- Image -->
+        <div class="col-md-6 text-center">
+          <img
+            src="/Images/lawnmower.png"
+            alt="lawnmower"
+            class="img-fluid rounded shadow mt-4 mt-md-0"
+            style="max-width: 500px"
+          />
+        </div>
+      </div>
+    </div>
+  </body>
+  <footer>
+    <div id="footer-placeholder"></div>
+    <script src="main.js"></script>
+  </footer>
 </html>
