--- a/frontend/OurWork.html
+++ b/frontend/OurWork.html
@@ -1,44 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>RoosterLandscaping | Our Work</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
- <div id="header-placeholder"></div>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <div id="header-placeholder"></div>
   <script src="main.js"></script>
-<body>
-      <p>Consulted he eagerness unfeeling deficient existence of. Calling nothing end fertile for venture way boy. Esteem spirit temper too say adieus who direct esteem. It esteems luckily mr or picture placing drawing no. Apartments frequently or motionless on reasonable projecting expression. Way mrs end gave tall walk fact bed.
+  <body>
+    <br /><br /><br />
+    <div class="container-fluid my-5 text-center">
+      <h2 style="font-weight: 650">Our Work</h2>
+      <div class="row align-items-center mt-5">
+        <!-- Left Image -->
+        <div class="col-md-4 mb-4 mb-md-0">
+          <img
+            src="/Images/woman_lawnmower.jpg"
+            alt="Lawn care work"
+            class="img-fluid rounded shadow"
+            style="max-height: 500px"
+          />
+        </div>
 
-Imagine was you removal raising gravity. Unsatiable understood or expression dissimilar so sufficient. Its party every heard and event gay. Advice he indeed things adieus in number so uneasy. To many four fact in he fail. My hung it quit next do of. It fifteen charmed by private savings it mr. Favourable cultivated alteration entreaties yet met sympathize. Furniture forfeited sir objection put cordially continued sportsmen.
+        <!-- Text -->
+        <div
+          class="col-md-4"
+          style="font-size: 1.8rem; line-height: 1.6; text-align: left"
+        >
+          <p>
+            Consulted he eagerness unfeeling deficient existence of. Calling
+            nothing end fertile for venture way boy. Esteem spirit temper too
+            say adieus who direct esteem. It esteems luckily mr or picture
+            placing drawing no. Apartments frequently or motionless on
+            reasonable projecting expression. Way mrs end gave tall walk fact
+            bed.
+          </p>
+          <p>
+            Imagine was you removal raising gravity. Unsatiable understood or
+            expression dissimilar so sufficient. Its party every heard and event
+            gay. Advice he indeed things adieus in number so uneasy. To many
+            four fact in he fail. My hung it quit next do of. It fifteen charmed
+            by private savings it mr. Favourable cultivated alteration
+            entreaties yet met sympathize.
+          </p>
+          <p>
+            Kept in sent gave feel will oh it we. Has pleasure procured men
+            laughing shutters nay. Old insipidity motionless continuing law shy
+            partiality. Depending acuteness dependent eat use dejection.
+            Unpleasing astonished discovered not nor shy. Morning hearted now
+            met yet beloved evening. Has and upon his last here must.
+          </p>
+        </div>
 
-Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutters nay. Old insipidity motionless continuing law shy partiality. Depending acuteness dependent eat use dejection. Unpleasing astonished discovered not nor shy. Morning hearted now met yet beloved evening. Has and upon his last here must.
-</p>
-<div class="container text-center">
-  <div class="row">
-    <div class="col">
-      <img src="/Images/woman_lawnmower.jpg" width="300px" class="img-flex" />
+        <!-- Right Image -->
+        <div class="col-md-4">
+          <img
+            src="/Images/mainpage_pic.webp"
+            alt="Landscape project"
+            class="img-fluid rounded shadow"
+            style="max-height: 500px"
+          />
+        </div>
+      </div>
     </div>
-    <div class="col-5">
-      <p>Consulted he eagerness unfeeling deficient existence of. Calling nothing end fertile for venture way boy. Esteem spirit temper too say adieus who direct esteem. It esteems luckily mr or picture placing drawing no. Apartments frequently or motionless on reasonable projecting expression. Way mrs end gave tall walk fact bed.
-
-Imagine was you removal raising gravity. Unsatiable understood or expression dissimilar so sufficient. Its party every heard and event gay. Advice he indeed things adieus in number so uneasy. To many four fact in he fail. My hung it quit next do of. It fifteen charmed by private savings it mr. Favourable cultivated alteration entreaties yet met sympathize. Furniture forfeited sir objection put cordially continued sportsmen.
-
-Kept in sent gave feel will oh it we. Has pleasure procured men laughing shutters nay. Old insipidity motionless continuing law shy partiality. Depending acuteness dependent eat use dejection. Unpleasing astonished discovered not nor shy. Morning hearted now met yet beloved evening. Has and upon his last here must.
-</p>
-    </div>
-    <div class="col">
-      <img src="/Images/mainpage_pic.webp" width="300px" class="img-flex"/>
-    </div>
-  </div>
-</div>
-  </div>
   </body>
+
   <footer>
-     <div id="footer-placeholder"></div>
-  <script src="main.js"></script>
+    <div id="footer-placeholder"></div>
+    <script src="main.js"></script>
   </footer>
 </html>
