--- a/frontend/header.html
+++ b/frontend/header.html
@@ -9,25 +9,31 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div class="center">
-    <a href="index.html" style="color: black; position: relative; top: 25px;">
-    <h1>Rooster Landscaping LLC</h1>
+  <header class="container-fluid position-relative py-3">
+    <div class="d-flex align-items-center justify-content-between">
+
+    <a href="index.html" class="d-flex align-items-center text-decoration-none text-dark">
+      <img src="/Images/rooster_logo.png"  alt="Logo" class="me-3" height="150">
     </a>
+    <h1 class="m-0 text-center flex-grow-1" style="font-weight: 650;">
+        <a href="index.html" class="text-dark text-decoration-none">
+          Rooster Landscaping LLC
+        </a>
+    </h1>   
     <a href="Contact.html">
-      <button style="background-color: green; font-weight: 600; margin-left: 90%; position: relative; bottom: 20px;"
-        type="button" class="btn btn-secondary btn-sm">Contact Us</button>
+      <div class="position-relative m-4" style="height: 50px;">
+      <button type="button" class="btn btn-success btn-lg fw-semibold m-3">
+        Contact Us
+      </button>
+        </div>
     </a>
   </div>
-  <a href="index.html">
-    <img src="/Images/rooster_logo.png"  alt="Logo" class="center" height="90" style="position: absolute;left: 35px; top: 4px;">
-  </a>
 
-  <div class="nav-link">
+  <div class="nav-link m-3">
     <ul class="nav nav-underline">
       <li class="nav-item">
         <a class="nav-link " href="index.html" style="color: black;">Home</a>
       </li>
-
       <li class="nav-item">
         <a class="nav-link" href="AboutUs.html" style="color: black;">About Us</a>
       </li>
@@ -43,6 +49,6 @@
 
     </ul>
   </div>
-
+</header>
 </body>
 </html>
