--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,59 +1,81 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>RoosterLandscaping | San Antonio, Tx</title>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Landscaping Website for Business" />
+    <meta name="keywords" content="Landscaping, Yard, Lawn, business" />
+    <meta name="author" content="Stacy Saucedo" />
+    <meta name="viewport" content="width = device-width, initial-scale=1.0" />
+    <meta http-equiv="refresh" content="30" />
 
-<head>
-  <title>RoosterLandscaping | San Antonio, Tx</title>
-  <meta charset="UTF-8" />
-  <meta name="description" content="Landscaping Website for Business" />
-  <meta name="keywords" content="Landscaping, Yard, Lawn, business" />
-  <meta name="author" content="Stacy Saucedo" />
-  <meta name="viewport" content="width = device-width, initial-scale=1.0" />
-  <meta http-equiv="refresh" content="30" />
- 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
- 
-</head>
-<body>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <!--Starting to add details-->
-  <div id="header-placeholder"></div>
-  <script src="main.js"></script>
-  
-  <!--Home Page pictures-->
-  <div id="bannerimagehome">
-  <img src="/Images/rooster_logo.png" alt="Logo" class="center img-fluid" height="auto" style="position: relative; width: 200px;">
-<h3 class="center" style="color: aliceblue;">We will meet your needs</h3>
-</div>
-<div class="container-fluid my-5">
-  <div class="row align-items-start">
-    <!-- Left column -->
-    <div class="col-4 d-flex flex-column align-items-start px-4">
-      <img src="/Images/mainpage_pic.webp" class="mb-4 rounded shadow" style="max-width: 350px;">
-      <img src="/Images/mainpage_pic2.jpeg" class="mb-4 rounded shadow" style="max-width: 350px;">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+
+  <body>
+    <!--JS-->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+    <div id="header-placeholder"></div>
+    <script src="main.js"></script>
+
+    <!--Home Page pictures-->
+    <div id="bannerimagehome"></div>
+
+    <div class="container-fluid my-5">
+      <div class="row align-items-start">
+        <!-- Left column -->
+        <div class="col-4 d-flex flex-column align-items-start px-4">
+          <img
+            src="/Images/mainpage_pic.webp"
+            class="mb-4 rounded shadow"
+            style="max-width: 750px"
+          />
+          <img
+            src="/Images/mainpage_pic2.jpeg"
+            class="mb-4 rounded shadow"
+            style="max-width: 750px"
+          />
+        </div>
+
+        <!-- Center logo -->
+        <div class="col-4 d-flex flex-column align-items-center">
+          <img
+            src="/Images/Logo.png"
+            alt="Rooster Landscaping business card"
+            title="Card"
+            class="img-fluid"
+            style="max-height: 600px; width: 850px"
+          />
+        </div>
+
+        <!-- Right column -->
+        <div class="col-4 d-flex flex-column align-items-end px-4">
+          <img
+            src="/Images/mainpage_pic3.webp"
+            class="mb-4 rounded shadow"
+            style="max-width: 750px"
+          />
+          <img
+            src="/Images/mainpage_pic4.jpg"
+            class="mb-4 rounded shadow"
+            style="max-width: 750px"
+          />
+        </div>
+      </div>
     </div>
 
-    <!-- Center logo -->
-    <div class="col-4 d-flex justify-content-center align-items-center">
-      <img src="/Images/Logo.png" alt="Rooster Landscaping business card" title="Card"
-           class="img-fluid" style="max-height: 450px;">
-    </div>
-
-    <!-- Right column -->
-    <div class="col-4 d-flex flex-column align-items-end px-4">
-      <img src="/Images/mainpage_pic3.webp" class="mb-4 rounded shadow" style="max-width: 350px;">
-      <img src="/Images/mainpage_pic4.jpg" class="mb-4 rounded shadow" style="max-width: 350px;">
-    </div>
-  </div>
-</div>
-
-  <!--Learn how to receive information submitted-->
-
-
-
-  
- <div id="footer-placeholder"></div>
-  <script src="main.js"></script>
-</body>
-
+    <!--Footer-->
+    <div id="footer-placeholder"></div>
+    <script src="main.js"></script>
+  </body>
 </html>
