--- a/frontend/header.html
+++ b/frontend/header.html
@@ -8,19 +8,30 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-    <div class="center">
-    <a href="index.html" style="color: black; position: relative; top: 25px;">
-    <h1>Rooster Landscaping LLC</h1>
-    </a>
-    <a href="Contact.html">
-      <button style="background-color: green; font-weight: 600; margin-left: 90%; position: relative; bottom: 20px;"
-        type="button" class="btn btn-secondary btn-sm">Contact Us</button>
-    </a>
-  </div>
-  <a href="index.html">
+<header class="main-header">
+<div class="container">
+    <div class="logo-section">
+      <div class="row align-items-center">
+        <div class="col-md-2">
+<a href="index.html">
     <img src="/Images/rooster_logo.png"  alt="Logo" class="center" height="90" style="position: absolute;left: 35px; top: 4px;">
   </a>
+        </div>
+    <div class="col-md-7">
+    <a href="index.html">
+    <h1 class="company-name mb-0">Rooster Landscaping LLC</h1>
+    </a>
+    <p class="company-tagline mb-0">Professional Landscaping Services in San Antonio</p>
+    </div>
+    <div class="col-md-3 text-end">
+    <a href="Contact.html" class="btn btn-primary-custom">
+        <i class="fas fa-phone me-2"></i>Get Quote
+    </a>
+    </div>
+  </div>
+    </div>
+</div>
+  
 
   <div class="nav-link">
     <ul class="nav nav-underline">
@@ -42,7 +53,19 @@
       </li>
 
     </ul>
-  </div>
+    <section id="home" class="hero-section">
+        <div class="container">
+            <div class="hero-content">
+                <h1>Transform Your Outdoor Space</h1>
+                <p>Professional landscaping services that bring your vision to life. From lawn care to complete landscape design, we've got you covered.</p>
+                <div>
+                    <a href="#contact" class="btn btn-primary-custom btn-lg me-3">Get Started Today</a>
+                    <a href="#services" class="btn btn-outline-light-custom btn-lg">View Our Services</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
-</body>
+  </div>
+</header>
 </html>
